--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-        <div class="x45wer4f5dsf" onclick="this.classList.toggle('active')">
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/66864619eaf3bd8d4d17eb91/1i1u83lfa';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+
+
+
+
+
+
+        <!-- <div class="x45wer4f5dsf" onclick="this.classList.toggle('active')">
           <div class="background"></div>
           <svg class="chat-bubble" width="100" height="100" viewBox="0 0 100 100">
           <g class="bubble">
@@ -41,6 +61,6 @@
           <circle class="circle circle2" cx="49.9" cy="50.7" r="1.9" />
           <circle class="circle circle3" r="1.9" cy="50.7" cx="57.3" />
           </svg>
-          </div>
+          </div> -->
   </body>
 </html>
